--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       </form>
     </nav>
 
+     <h1 class="demo">
+      For demo use: Username1: KZ; Password: 1111; Username2: JD; Password:
+      2222;
+    </h1>
+    
     <main class="app">
       <!-- BALANCE -->
       <div class="balance">
